# postman-cli-transformer

./: .gitignore  README.md  ascii-postman-cli-run.txt  nofolders.txt  pyproject.toml  test.txt
.github/workflows/: publish.yml  test.yml
postman_cli_transformer/: cli.py  decipherer.py  parsers.py  processor.py
samples/: Pinball Prod.postman_environment.json
samples/results/: ascii-postman-cli-run.txt  newman-htmlextra-results.html  newman-json-results.json
tests/: test_complete_doc.py  test_decipherer.py  test_parsers.py  test_postman_cli_transformer.py  test_processor.py
tests/samples/: Craig Private Pinball Map Collection.postman_collection.json  Pinball Prod.postman_environment.json  getresults.sh
tests/samples/results/: newman-htmlextra-results.html  newman-json-results.json  newman-junit-report.xml  postman-cli-run.txt
tests/test_data/: expected-results.txt  new_results.txt  postman-cli-run.txt
